<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_Notas"
        android:layout_width="324dp"
        android:layout_height="222dp"
        android:layout_marginTop="48dp"
        android:background="#63A6DFA8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabeçalho">

        <EditText
            android:id="@+id/text_Titulo_notas"
            android:layout_width="272dp"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/text_hint_edit_tituloNota"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_Texto_notas"
            android:layout_width="271dp"
            android:layout_height="85dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_edit_Texto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Titulo_notas"
            app:layout_constraintVertical_bias="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cabeçalho"
        android:layout_width="410dp"
        android:layout_height="62dp"
        android:background="#4CAF50"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="#4CAF50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

        <TextView
            android:id="@+id/text_Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_anotacoes"
            android:textColor="#EFEFEF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toEndOf="@+id/button_menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.457" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_flutuante_excluir"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toEndOf="@+id/button_flutuante_salvar"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/todo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_flutuante_excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:contentDescription="TODO" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_flutuante_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="56dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#4CAF50"
        android:clickable="true"
        app:backgroundTint="#F4F4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_flutuante_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#A6DFA8"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="499dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_flutuante_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#A6DFA8"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="374dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_flutuante_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#A6DFA8"
        app:srcCompat="@android:drawable/ic_menu_agenda"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="430dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_flutuante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/button_flutuante_time"
        app:layout_constraintEnd_toStartOf="@+id/button_flutuante_descricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_flutuante_img"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        app:layout_constraintTop_toBottomOf="@+id/button_flutuante_salvar"
        tools:layout_editor_absoluteX="62dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton4"
        tools:layout_editor_absoluteX="187dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="49dp"
        android:layout_height="20dp"
        android:text="@string/excluir"
        app:layout_constraintTop_toBottomOf="@+id/button_flutuante_excluir"
        tools:layout_editor_absoluteX="314dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>